--- a/src/components/Pet/Pet.css
+++ b/src/components/Pet/Pet.css
@@ -2,29 +2,42 @@
   display: grid;
   grid-template-areas:
       "chart chart chart"
-      "name name meta"
+      "details details meta"
       "low high humidity";
   grid-template-columns: repeat(3, 1fr);
 
   box-shadow: 0 10px 15px -3px rgba(0,0,0,.1), 0 4px 6px -2px rgba(0,0,0,.05);
   background-color: #fff;
-  border-radius: 0.5rem;
+  border-radius: 0.25rem;
   overflow: hidden;
 }
 
 .Pet__chart {
   grid-area: chart;
-  height: 8rem;
+}
 
-  background-color: #2d3748;
+.Pet__details {
+  display: flex;
+  align-items: center;
+
+  padding: 1rem 0 1rem 1rem;
+  grid-area: details;
+  font-size: 2em;
+  line-height: 1;
 }
 
 .Pet__name {
-  grid-area: name;
-  padding: 1rem 0 1rem 1rem;
-  font-size: 2em;
-  line-height: 1;
   font-weight: lighter;
+}
+
+.Pet__image {
+  display: inline-block;
+  width: 1.4em;
+  height: 1.4em;
+  background-size: cover;
+  border-radius: 50%;
+  margin-right: 1rem;
+  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.2) inset;
 }
 
 .Pet__meta {
@@ -39,6 +52,8 @@
 .Pet__value {
   padding: 1rem;
   text-align: center;
+  border-top: 1px solid #eee;
+  background-color: #fafbfc;
 }
 
 .Pet__valueTitle {
@@ -63,7 +78,7 @@
   vertical-align: top;
   font-size: 0.4em;
   line-height: 1.6;
-  margin-left: 1px;
+  margin-left: 2px;
 }
 
 .Pet__value--low { grid-area: low; }
