--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,6 @@ body {
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
   font-size: 16px;
 
-  background-color: #fafafa;
+  background-color: #f5f7f9;
   color: #4a5568;
 }
