--- a/src/components/Pet/Pet.css
+++ b/src/components/Pet/Pet.css
@@ -37,7 +37,8 @@
   background-size: cover;
   border-radius: 50%;
   margin-right: 1rem;
-  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.2) inset;
+  box-shadow: 0 0 7px 1px rgba(0, 0, 0, 0.1) inset;
+  background-color: #eee;
 }
 
 .Pet__meta {
